tests/negative/syntax/import_inside_function/utils.ci
int util() { return 1; }
